module/core/mod_interface/tests/inc/derive/use_unknown_vis/trybuild.stderr
error: expected one of: `mod`, `use`, `layer`
 --> $WORKSPACE/module/core/mod_interface/tests/inc/derive/use_unknown_vis/mod.rs
  |
  |   xyz use f1;
  |   ^^^
